# gol-wasm

./: Cargo.toml  LICENSE_MIT  after.txt  before.txt
benches/: bench.rs
src/: lib.rs  utils.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
