[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Cuong Nguyen <ancuongnguyen07@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
fixedbitset = "0.5.7"
web-sys = { version = "0.3.69", features = ["console",] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
# a more aggressive option could be `opt-level = "z"`
# Sometimes, 's' options outputs a better result than the 'z' opt
# ALWAYS mesure!!!
opt-level = "s"
# Give LLVM many more chances to inline and prune functions
# -> faster at runtime but the compilation time could be long.
lto = true
